--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@urfri/react-uploader",
   "version": "0.0.4",
   "description": "An easy, extendable react uploader.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npx webpack --config ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
